@@ -13,6 +13,11 @@
  *
  */
 
+// Workaround for a "misbehaviour" when compiling resource scripts using
+// eMbedded Visual C++. The standard .rc file includes windows header files,
+// which in turn include stdarg.h, which results in warnings and errors
+#if !defined(RC_INVOKED)
+
 # ifndef _STLP_OUTERMOST_HEADER_ID
 #  define _STLP_OUTERMOST_HEADER_ID 0x264
 #  include <stl/_prolog.h>
@@ -47,6 +52,8 @@
 #   undef  _STLP_DONT_POP_HEADER_ID
 #  endif
 # endif
+
+#endif /* RC_INVOKED */
 
 // Local Variables:
 // mode:C++
